# legacy_confluece_to_md

./: .gitignore  Makefile  README.md  download_from_confluence.py  env_example  main.py  pyproject.toml  requirements.txt
.buddy/todos/: dataclass_fix.md
modules/: __init__.py  downloader.py
modules/pdf_converter/: __init__.py  code_formatter.py  config.py  converter.py  indentation_preserver.py  marker_cleaner.py
